--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   -- @author chentong <chentong@zuzuche.com>
   -- @date 2018-04-25 15:47:34
   -- @last_modified_by chentong <chentong@zuzuche.com>
-  -- @last_modified_date 2018-04-25 16:38:10
+  -- @last_modified_date 2018-10-12 12:03:56
   -- @copyright (c) 2018 @fe/my-first-react
   -- --------------------------------------------------------
  -->
@@ -18,6 +18,7 @@
 
     <body>
         <div id="app"></div>
+        <div id="app1"></div>
         <!-- js文件会自动插入到这里，无需自己填写 -->
     </body>
 </html>
